fix button collapse on dropdown optikns

--- a/src/client/scss/ui/DropdownOptions.scss
+++ b/src/client/scss/ui/DropdownOptions.scss
@@ -9,6 +9,8 @@
     background-color: inherit;
     border: none;
     color: $text-color-light;
+    display: block;
+    height: 30px;
     outline: none;
     padding: 5px 8px;
     text-align: left;
